<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Dashboard"
        android:enabled="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/itineraryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="Itinerary"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="Profile"
        android:enabled="true"
        app:showAsAction="always"/>
</menu>