...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="19.00 - 20.00"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="@+id/txt_ratingTempat"
                app:layout_constraintStart_toStartOf="@+id/txt_ratingTempat"
                app:layout_constraintTop_toBottomOf="@+id/txt_ratingTempat" />

            <Button
                android:id="@+id/button3"
...
